# MicroTPCT

./: .gitignore  CLI_USAGE_GUIDE.py  README.md  microtpct_matching_result_20260126_181636.csv  microtpct_statistics_20260126_173026.csv  microtpct_statistics_20260126_181636.csv  pyproject.toml  requirements.txt
.github/workflows/: build-gui.yml
benchmark/: aligner_benchmark.ipynb  aligner_benchmark.py  alignment.py  bench_functions.py  bench_parallel.csv  bench_seq.csv  benchmark_core.py  data_generator.py  match_engine_benchmark.ipynb  requirements.txt  workflow.ipynb
docs/: USAGE.txt
microtpct/: __init__.py  __version__.py
microtpct/config/: __init__.py
microtpct/core/: sequences.py
microtpct/io/: schema.py
notebooks/: MicroTPCT_step_by_step_pipeline.ipynb
notebooks/example_data/: generate_example_data.py  peptides.xlsx  proteome.fasta
src/microtpct/: __init__.py  __version__.py
src/microtpct/config/: defaults.yaml
src/microtpct/core/: __init__.py  awk_search.sh  boyer_moore.py  databases.py  flag_wildcard.py  grawk_launcher.py  grawk_match.sh  grep_search.sh  match_ahocorasick.py  match_ahocorasick_rs.py  match_blast.py  match_blast_basic.py  match_find.py  match_in.py  pipeline.py  python_find.py  regex_searcher.py  registry.py  results.py  sequences.py
src/microtpct/core/match/: __init__.py  boyer_moore.py  grawk_launcher.py  grawk_match.sh  match_blast.py  match_blast_basic.py  match_find.py  (+2 more)
src/microtpct/interfaces/: cli.py  gui.py
src/microtpct/io/: converters.py  readers.py  schema.py  validators.py  writers.py
src/microtpct/utils/: __init__.py  data_generator.py  exceptions.py  exeptions.py  logging.py
tests/: cli_test.py  logger.py  matching_algo.py  minimal_pipeline.py  pipeline_test.py  readers.py  schema.py  schema_and_validator.py  sequences_formats.py  writer.py
(+5 files in other folders)
