[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microtpct"
packages = ["microtpct"]
version = "0.0.1-dev"
description = "MicroTPCT: Microproteotypicity of Peptides Control Tool"

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ahocorasick_rs",
    "Bio",
    "biopython",
    "microtpct",
    "pandas",
    "pyahocorasick",
    "pybmoore",
]

[tool.setuptools.packages.find]
where = ["src"]

